# cam_scholar_chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  intentchat_ml.ipynb  pyproject.toml  recommender_ml.ipynb
data/: intents.json  scholarship_training_data.csv
src/app/: chatbot.py  demo.py  recommender.py  train_intent.py  train_scholarship.py
src/models/: chatbot_model.h5  classes.pkl  scholarship_model.pkl  words.pkl
