[project]
name = "cam-scholar-chatbot"
version = "0.1.0"
description = ""
authors = [
    { name = "rethsopheak", email = "rethsopheak@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "keras (>=3.13.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=1.4.0,<3)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
